# simple-chat

./: Cargo.toml  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
tests/: Cargo.toml  client_test.rs  server_test.rs
types/: Cargo.toml
types/src/: lib.rs
