[profile.release]
debug = true
lto = true
rpath = false
incremental = true
opt-level = 3
codegen-units = 6

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
axum = { version= "0.7", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = "0.23"
futures = "0.3"
url = "2.4.0"

[workspace]
resolver = "2"
members = [ "types", "server", "client", "tests" ]
